--- a/README
+++ b/README
@@ -11,8 +11,28 @@ HTML 연습용 웹사이트
 https://dingco4709.github.io/Raccoonwebpage_Learning-HTML/
 
 앞으로 개선할 점
--CSS 배워서 디자인 적용하기
+-CSS 배워서 디자인 개선
 -버튼 추가
--사용자가 사진, 버튼에 커서 두면 움직이도록 만들기
--반응형 웹페이지로 만들기
+-사용자가 사진, 버튼에 커서 두면 애니메이션 효과 나타나게 하기
+-반응형 웹페이지로 리팩토링
 
+# HTML 연습용 웹사이트
+
+**제작 기간:** 2025.11.23 ~ 2025.11.25  
+**사용 언어:** HTML
+
+## 📌 구현한 기능
+- 기본 텍스트 마크업 태그 활용
+- 이미지 삽입
+- 링크 연결
+- 리스트 작성
+- 로컬 파일 간 페이지 이동 구현
+
+## 🔗 사이트 링크
+[https://dingco4709.github.io/Raccoonwebpage_Learning-HTML/](https://dingco4709.github.io/Raccoonwebpage_Learning-HTML/)
+
+## 🚀 앞으로 개선할 점
+- CSS를 적용해 전체 디자인 개선
+- 버튼 UI 추가
+- 이미지/버튼 hover 시 애니메이션 효과 추가
+- 반응형 웹페이지로 리팩토링
